# efficient-evolution

./: .gitignore  README.md  pyproject.toml
config/: models.yaml
efficient_evolution/: amis_new.py  fb_model_new.py  recommend.py
src/: amis_new.py  fb_model_new.py  recommend.py  test_fb_model_encode.py  test_reconsruct.py  utils.py
test/: compute_ppl_mlm.py  test_fb_model_encode.py  test_reconsruct.py
